0.9/_sources/checks_gallery/tabular/data_integrity/plot_special_chars.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/data_integrity/plot_special_chars.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_data_integrity_plot_special_chars.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_data_integrity_plot_special_chars.py:


.. _plot_tabular_special_chars:

Special Characters
******************

This notebook provides an overview for using and understanding the Special Characters check.

**Structure:**

* `What is the Special Characters check <#what-is-special-characters>`__
* `Generate data <#generate-data>`__
* `Run the check <#run-the-check>`__

.. GENERATED FROM PYTHON SOURCE LINES 18-21

What is the Special Characters check
======================================
The ``SpecialCharacters`` check search in column[s] for values that contains only special characters.

.. GENERATED FROM PYTHON SOURCE LINES 24-29

.. code-block:: default


    import pandas as pd

    from deepchecks.tabular.checks import SpecialCharacters








.. GENERATED FROM PYTHON SOURCE LINES 30-32

Generate Data
==============

.. GENERATED FROM PYTHON SOURCE LINES 32-50

.. code-block:: default

    data = {'col1': [' ', '!', '"', '#', '$', '%', '&', '\'','(', ')',
                     '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', 
                     '>', '?', '@', '[', ']', '\\', '^', '_', '`', '{',
                     '}', '|', '~', '\n'],
            'col2':['v', 'v', 'v', 'v4', 'v5', 'v6', 'v7', 'v8','v9','v10', 
                     '*', '+', ',', '-', '.', '/', ':', ';', '<', '=', 
                     '>', '?', '@', '[', ']', '\\', '^', '_', '`', '{',
                     '}', '|', '~', '\n'],
            'col3': [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,11,1,'???#',1,1,1,1,1,1,1,1,1,1,1],
            'col4': [1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,11,1,1,1,1,1,1,1,1,1,1,1,1,1],
            'col5': ['valid1','valid2','valid3','valid4','valid5','valid6','valid7',
                     'valid8','valid9','valid10','valid11','valid12',
                    'valid13','valid14','inval!d15','valid16','valid17','valid18',
                     'valid19','valid20','valid21','valid22','valid23','valid24','valid25',
                    'valid26', 'valid27','valid28','valid29','valid30','valid31','32','33','34']}

    dataframe = pd.DataFrame(data=data)








.. GENERATED FROM PYTHON SOURCE LINES 51-53

Run the check
===============

.. GENERATED FROM PYTHON SOURCE LINES 53-54

.. code-block:: default

    SpecialCharacters().run(dataframe)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Special Characters</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"5c04839d2be7444497260df22d68f93d": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_535cb05e3bb04c3882c132409e1d3339", "IPY_MODEL_ea686dcfd31e4b0ba0567c512fbfb2af", "IPY_MODEL_b82ec496d3c442f4ab3197c89c32e3e1", "IPY_MODEL_c17ee2cd537a493ba8618a9e74b6c67d"], "layout": "IPY_MODEL_ab675fe6648349d6ae78523dc08042c0"}}, "535cb05e3bb04c3882c132409e1d3339": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_bc0a785532f940a3971067a13ea883cf", "style": "IPY_MODEL_f41ef11e34f74003b9ef9e9413e88b2b", "value": "<h4><b>Special Characters</b></h4>"}}, "bc0a785532f940a3971067a13ea883cf": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "f41ef11e34f74003b9ef9e9413e88b2b": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "ea686dcfd31e4b0ba0567c512fbfb2af": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_a5f4f913b05446e4ae9c2bb26b995e87", "style": "IPY_MODEL_0ec7d4d0189d4e358435db2148cbdf0c", "value": "<p>Search in column[s] for values that contains only special characters. <a href=\"https://docs.deepchecks.com/0.9/checks_gallery/tabular/data_integrity/plot_special_chars.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "a5f4f913b05446e4ae9c2bb26b995e87": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "0ec7d4d0189d4e358435db2148cbdf0c": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "b82ec496d3c442f4ab3197c89c32e3e1": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_2bfff2e37bf0485eb606d1d1be555063", "style": "IPY_MODEL_d9426ef6c8b846af8ca1f4a720488636"}}, "2bfff2e37bf0485eb606d1d1be555063": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "d9426ef6c8b846af8ca1f4a720488636": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "c17ee2cd537a493ba8618a9e74b6c67d": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_7ebe2d2648cc4efc818966e237d15879", "IPY_MODEL_89c822b7dd894b97b70335f9d7062f3d", "IPY_MODEL_1d6e1f07d3ff431fa461468f1e553067"], "layout": "IPY_MODEL_74c1d638952046f7be9048cf6cf27bdb"}}, "7ebe2d2648cc4efc818966e237d15879": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_46debf4079524dd09675540468bfbc62", "style": "IPY_MODEL_26b5f7e0da09442f84fcb1ca950918c0", "value": "<h5><b>Additional Outputs</b></h5>"}}, "46debf4079524dd09675540468bfbc62": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "26b5f7e0da09442f84fcb1ca950918c0": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "89c822b7dd894b97b70335f9d7062f3d": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_bd8349ffdbcc4de7a3a55d5fb8e2b1b7", "style": "IPY_MODEL_5dd1cde6f2cb454f858f77abaa164e76", "value": "<div>Showing only the top 10 columns, you can change it using n_top_columns param</div>"}}, "bd8349ffdbcc4de7a3a55d5fb8e2b1b7": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "5dd1cde6f2cb454f858f77abaa164e76": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "1d6e1f07d3ff431fa461468f1e553067": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_3e81b08ae9b54e20a3a9f88331121535", "style": "IPY_MODEL_863853815eca4fd5bfbe89b57a9af373", "value": "<style type=\"text/css\">\n#T_64b0e_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64b0e_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64b0e_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64b0e_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_64b0e_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_64b0e_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >% Special-Only Samples</th>\n      <th class=\"col_heading level0 col1\" >Most Common Special-Only Samples</th>\n    </tr>\n    <tr>\n      <th class=\"index_name level0\" >Column Name</th>\n      <th class=\"blank col0\" >&nbsp;</th>\n      <th class=\"blank col1\" >&nbsp;</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_64b0e_level0_row0\" class=\"row_heading level0 row0\" >col1</th>\n      <td id=\"T_64b0e_row0_col0\" class=\"data row0 col0\" >100%</td>\n      <td id=\"T_64b0e_row0_col1\" class=\"data row0 col1\" >['/', '=']</td>\n    </tr>\n    <tr>\n      <th id=\"T_64b0e_level0_row1\" class=\"row_heading level0 row1\" >col2</th>\n      <td id=\"T_64b0e_row1_col0\" class=\"data row1 col0\" >70.59%</td>\n      <td id=\"T_64b0e_row1_col1\" class=\"data row1 col1\" >['/', '=']</td>\n    </tr>\n    <tr>\n      <th id=\"T_64b0e_level0_row2\" class=\"row_heading level0 row2\" >col3</th>\n      <td id=\"T_64b0e_row2_col0\" class=\"data row2 col0\" >2.94%</td>\n      <td id=\"T_64b0e_row2_col1\" class=\"data row2 col1\" >['???#']</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "3e81b08ae9b54e20a3a9f88331121535": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "863853815eca4fd5bfbe89b57a9af373": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "74c1d638952046f7be9048cf6cf27bdb": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "ab675fe6648349d6ae78523dc08042c0": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "5c04839d2be7444497260df22d68f93d"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.041 seconds)


.. _sphx_glr_download_checks_gallery_tabular_data_integrity_plot_special_chars.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_special_chars.py <plot_special_chars.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_special_chars.ipynb <plot_special_chars.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
